5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1674_1872.log
== SUBMITION (2019-05-02 00:50:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.145758
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.142958
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.201329
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.20778
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.199509
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.258055
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.423491
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.460958
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.468562
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.463566
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.604588
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.578721
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.340216
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.358875
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.437688
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.448563
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.442962
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.342683
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.391841
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.577631
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.538024
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.593084
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(y>0)or(y<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y>0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.33657
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:52:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.157676
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.254518
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.193465
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.183763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.387199
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.370282
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.444095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.621952
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.423137
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.418338
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.408409
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.433115
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.474828
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.553688
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.442685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.274546
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.504974
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.563935
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.559079
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.573044
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.582065
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.468367
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.470887
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.299415
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.351806
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.48635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.597469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.603004
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.359405
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.280736
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.297104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.569381
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.692487
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.356102
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.632944
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.391176
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.498004
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.343829
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.494508
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.390889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.385619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.466228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.444844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.511335
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.499789
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.524999
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.480216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.442704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.463692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.483679
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.453719
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.400523
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.464971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.618822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x:"))
y = float(input("valor de y:"))
if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(X>0)or(X<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.432492
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 7, in <module>
    elif(y==0)and(X>0)or(X<0):
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
